[package]
name = "ntdb_unwrap-cli"
version = "0.2.2"
edition = "2024"
license = "MIT"
description = "CLI tool for decrypt/decoded NTQQ database files."
homepage = "https://github.com/artiga033/ntdb_unwrap/tree/main/ntdb_unwrap-cli"
repository = "https://github.com/artiga033/ntdb_unwrap/tree/main/ntdb_unwrap-cli"
[[bin]]
name = "ntdb_unwrap"
path = "src/main.rs"

[dependencies]
snafu = { workspace = true }
rusqlite = { workspace = true }
ntdb_unwrap = { path = "..", version = "0" }
clap = { version = "4.5.28", features = ["cargo"] }
# for the "serve" feature
axum = { version = "0.8.1", features = ["macros"], optional = true }
tokio = { version = "1.43.0", features = ["full"], optional = true }
utoipa = { version = "5.3.1", features = ["axum_extras"], optional = true }
utoipa-axum = { version = "0.2.0", optional = true }
utoipa-scalar = { version = "0.3.0", features = ["axum"], optional = true }
serde = { version = "1.0.217", features = ["derive"], optional = true }
memmap2 = "0.9"
memchr = "2"
fat-macho = "0.4.10"
lldb = "0.0.12"
sysinfo = "0.37.2"
serde_json = "1.0.145"

[features]
default = ["serve"]
# enable a http server to serve the contents of the database
serve = ["axum", "tokio", "utoipa", "utoipa-axum", "utoipa-scalar", "serde"]
